--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 cycler==0.10.0
-frs==0.0.1
 Jinja2==2.10
 kiwisolver==1.0.1
 lifelines==0.17.0
@@ -16,3 +15,4 @@ seaborn==0.9.0
 six==1.12.0
 tqdm==4.29.1
 tzlocal==1.5.1
+git+https://github.com/fonnesbeck/framingham_risk.git
